# calc

./: .clang-format  .gitignore  CMakeLists.txt  calculations.cpp  calculations.h  main.cpp  notation_operations.cpp  notation_operations.h  operand.cpp  operand.h  variables.cpp  variables.h
